# otterai-api

./: .gitignore  otterdownload.py  pyproject.toml  test_query.py
otterai/: otterai.py
